[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["pascal <zeroesrow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
pydantic = { extras = ["dotenv"], version = "^1.9.1" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
